--- a/src/views/Estaciones.hbs
+++ b/src/views/Estaciones.hbs
@@ -15,7 +15,7 @@
             <div class="card col-md-12 p-4">
                 <div class="row">
                     <div class="col-md-8">
-                        <h5>DETALLES DE ESTACIONES</h5>
+                        <h5>DETALLES DE ESTACIONES asasas</h5>
                     </div> 
                     <div class="col-md-4 p-1">
                         <div class="card card-body text-center">
